[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-graph-mcp"
version = "0.1.0"
description = "Knowledge graph + vector search for AI agent skill discovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Julian Saks" },
]
keywords = ["mcp", "knowledge-graph", "ai-agents", "skill-discovery", "wikilinks", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "sentence-transformers>=2.2",
    "fastmcp>=0.1",
]

[project.urls]
Homepage = "https://github.com/kingjulio8238/skill_graph"
Repository = "https://github.com/kingjulio8238/skill_graph"
Issues = "https://github.com/kingjulio8238/skill_graph/issues"

[project.scripts]
skill-graph = "skill_graph.cli:cli"
skill-graph-mcp = "skill_graph.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skill_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
